--- a/server/public/index.html
+++ b/server/public/index.html
@@ -24,9 +24,21 @@
     <ul id="nav">
 
 
-       <li><a href="about.html">About</a></li>
+       <li><a href="index.html">About</a></li>
 
 	
+
+		<li><a href="trevorsampson.html">Trevor Sampson</a></li>
+
+		<li><a href="thanhdip.html">Thanh Dip</a></li>
+
+		<li><a href="tonyrodriguez.html">Tony Rodriguez</a></li>
+
+		<li><a href="pyaenaing.html">Pyae Naing</a></li>
+
+		<li><a href="shivamrai.html">Shivam Rai</a></li>
+
+		<li><a href="surabhichavan.html">Surabhi Chavan</a></li>
 
 
 
@@ -44,18 +56,6 @@
                 <p> This is a project About Page </p>
 
 		<p> We are working on Cookable.com </p>
-
-		<p><a href="trevorsampson.html">Trevor Sampson</a></p>
-
-		<p><a href="thanhdip.html">Thanh Dip</a></p>
-
-		<p><a href="tonyrodriguez.html">Tony Rodriguez</a></p>
-
-		<p><a href="pyaenaing.html">Pyae Naing</a></p>
-
-		<p><a href="shivamrai.html">Shivam Rai</a></p>
-
-		<p><a href="surabhichavan.html">Surabhi Chavan</a></p>
 
             </div>
 
