--- a/server/public/profiles/thanhdip.html
+++ b/server/public/profiles/thanhdip.html
@@ -10,12 +10,12 @@
 <body>
 	<ul id="nav">
         <li><a href="../index.html">About</a></li>
-		<li><a href="profiles/trevorsampson.html">Trevor Sampson</a></li>
-        <li><a href="profiles/thanhdip.html">Thanh Dip</a></li>
-		<li><a href="profiles/tonyrodriguez.html">Tony Rodriguez</a></li>
-		<li><a href="profiles/pyaenaing.html">Pyae Naing</a></li>
-		<li><a href="profiles/shivamrai.html">Shivam Rai</a></li>
-		<li><a href="profiles/surabhichavan.html">Surabhi Chavan</a></li>
+		<li><a href="./trevorsampson.html">Trevor Sampson</a></li>
+        <li><a href="./thanhdip.html">Thanh Dip</a></li>
+		<li><a href="./tonyrodriguez.html">Tony Rodriguez</a></li>
+		<li><a href="./pyaenaing.html">Pyae Naing</a></li>
+		<li><a href="./shivamrai.html">Shivam Rai</a></li>
+		<li><a href="./surabhichavan.html">Surabhi Chavan</a></li>
     </ul>
 	<div id="Wrapper">
         <div class="widget">
