--- a/server/public/profiles/thanhdip.html
+++ b/server/public/profiles/thanhdip.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Trevor Sampson</title>
+	<title>Thanh Dip</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="../site.css">
 </head>
